--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI绘画负性评价原因探究 | 欢迎</title>
+    <title>绘画作品感知研究 | 欢迎</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
 </head>
@@ -12,14 +12,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>AI绘画负性评价原因探究</h1>
+            <h1>绘画作品感知与评价实验</h1>
             <div class="subtitle">学术研究问卷</div>
         </header>
 
         <section class="welcome-section">
             <h2>欢迎参与</h2>
-            <p>感谢您参与本次关于AI绘画评价的学术研究。本研究旨在探索人们对AI生成艺术作品的感知与评价机制，您的参与对推动相关领域的研究具有重要意义。</p>
-
+            <p>感谢您参与本次绘画作品感知与评价实验。本研究旨在探索人们对不同类型绘画作品的感知机制。您的反馈对推动相关研究发展具有重要价值。</p>
             <div class="process-overview">
                 <h3>实验流程</h3>
                 <ol>
@@ -45,7 +44,7 @@
         </section>
 
         <footer>
-            <p>© 2025 AI绘画研究项目组 | 如有问题请联系: research@example.com</p>
+            <p>© 2025 XX绘画研究项目组 | 如有问题请联系: research@example.com</p>
         </footer>
     </div>
 
