--- a/Information-Collection.html
+++ b/Information-Collection.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI绘画负性评价原因探究 | 基本信息</title>
+    <title>绘画作品感知与评价实验 | 基本信息</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <style>
@@ -115,7 +115,7 @@
         </section>
 
         <footer>
-            <p>© 2025 AI绘画研究项目组 | 如有问题请联系: research@example.com</p>
+            <p>&copy; 2025 绘画作品感知与评价实验项目组</p>
         </footer>
     </div>
 
