--- a/experiment.html
+++ b/experiment.html
@@ -51,6 +51,7 @@
                 <span id="progress-text">3/5</span>
             </div>
             <div class="experiment-info">
+                <span id="group-info">组别: 加载中...</span>
                 <span id="image-counter">图片: 1/5</span>
             </div>
         </header>
